2013-09-20  Basile Starynkevitch  <basile@starynkevitch.net>

       * gengtype.c (file_rules): Added rule for *.cc files.
       (get_output_file_with_visibility): Give fatal message when no
       rules found.

2013-09-20  Renlin Li  <renlin.li@arm.com>

	* config/aarch64/aarch64.c (aarch64_expand_prologue): Use plus_constant.
	(aarch64_expand_epilogue): Likewise.
	(aarch64_legitimize_reload_address): Likewise.

2013-09-20  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR middle-end/57748
	* expr.c (expand_assignment): Remove misalignp code path.

2013-09-20  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/58413
	* ubsan.c (get_ubsan_type_info_for_type): Use TYPE_SIZE instead of
	TYPE_PRECISION.  Add asserts.

2013-09-20  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58453
	* tree-loop-distribution.c (distribute_loop): Apply the cost
	model for -ftree-loop-distribute-patterns, too.

2013-09-20  Richard Biener  <rguenther@suse.de>

	PR middle-end/58473
	* tree-chrec.h (build_polynomial_chrec): Use gcc_checking_assert,
	make type comparison less strict.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.
	* aclocal.m4: Regenerate.

2013-09-20  Marek Polacek  <polacek@redhat.com>

	PR other/58467
	* doc/extend.texi: Document that attribute used is meant to be used
	on variables with static storage duration.

2013-09-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/58472
	* tree-vect-stmts.c (vectorizable_store, vectorizable_load): For
	simd_lane_access set inv_p = false.
	* omp-low.c (lower_rec_input_clauses): Set TREE_NO_WARNING on
	the simduid magic VAR_DECL.

2013-09-19  Jan Hubicka  <jh@suse.cz>

	* i386.c (generic_memcpy, generic_memset): Fix 32bit template.

2013-09-17  Jeff Law  <law@redhat.com>

	* tree-ssa-dom.c (record_temporary_equivalences): New function
	split out of dom_opt_dom_walker::after_dom_children.
	(dom_opt_dom_walker::thread_across_edge): Move common code